# django-minio-storage

./: .editorconfig  .flake8rc  .gitignore  .isort.cfg  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE-APACHE  README.md  dev-requirements.txt  docker-compose.yml  docs-requirements.txt  mkdocs.yml  pyproject.toml  pyrightconfig.json  run_tests.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  tox.yml
.pytest_cache/v/cache/: nodeids
docs/: contributing.md  contributors.md  development.md  fork.md  index.md  licences.md  usage.md
minio_storage/: __init__.py  apps.py  errors.py  files.py  policy.py  storage.py  tests.py
minio_storage/management/: base.py
minio_storage/management/commands/: minio.py  minio_bucket.py  minio_bucket_policy.py
tests/: manage.py
tests/django_minio_storage_tests/: settings.py  urls.py  wsgi.py
tests/test_app/tests/: __init__.py  bucket_tests.py  custom_storage_class_tests.py  delete_tests.py  managementcommand_tests.py  package_tests.py  retrieve_tests.py  settings_tests.py  upload_tests.py  utils.py
