[project]
name = "django-minio-storage"
description = "Django file storage using the minio python client"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
  "django>=3.2",
  "minio>=7.1.16",
]
classifiers=[
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Framework :: Django",
]
authors = [
  {name = "Thomas Frössman", email = "thomasf@jossystem.se"},
  {name = "Tom Houlé", email = "tom@kafunsho.be"},
]
maintainers = [
  {name = "Thomas Frössman", email = "thomasf@jossystem.se"},
]
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["setuptools>=62", "setuptools_scm[toml]>=6.2"]

[project.urls]
Homepage = "https://github.com/py-pa/django-minio-storage"
Repository = "https://github.com/py-pa/django-minio-storage"
Documentation = "https://django-minio-storage.readthedocs.io/"

[tool.setuptools_scm]
write_to =  "minio_storage/version.py"
write_to_template = '__version__ = "{version}"'
tag_regex =  "^v(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "C9",
    "DJ",
    "E",
    "F",
    "I",
    "ISC",
    "NPY",
    "PLC",
    "PLE",
    "PLW",
    "RUF010",
    "RUF013",
    "S5",
    "S6",
    "UP",
    "W",
]
ignore = ["E203"]
